2011-01-25  Jeff Segars  <jeff@webempoweredchurch>

	* Fixed bug #17216: Admin panel becomes too wide

2011-01-25  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Synchronized external repositories of version (tag 4.5.0rc2) and workspaces (tag 4.5.0rc2)

2011-01-25  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17281: "Select files" in FlashUploader works only on the second click in Firefox / position: value of ExtJS button changes on click (Thanks to Sascha Korth and Christopher Stelmaszyk)

2011-01-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17282: Workspaces module get placed on "top" of all Web> modules if sysext "info" is uninstalled (positioning relative to uninstalled sysext not working as documented)
	* Fixed issue #17260: Installation of version/workspaces cannot be skipped in migration wizard (Thanks to Francois Suter)
	* Fixed bug #17215: TCEFORM.tt_content.colPos.removeItems not working correctly on colPos with new backend layouts (Thanks to Jo Hasenau)

2011-01-24  Steffen Kamper  <steffen@typo3.org>

	* Merge of extension manager for RC2
	* Fixed bug #17275: Pagetree preloads huge amount of pages with initial load / refresh
	* Follow-up to #17222: in case of render outside the BE set default value
	* Fixed bug #17222: fitToParent calculates wrong height

2011-01-24  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0
	* Fixed bug #17267: Live search is unusable with Oracle

2011-01-24  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17274: SQL error in Update Wizard of workspaces

2011-01-24  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17078: in fileadmin saving changes from t3editor doesn't work
	* Fixed bug #17270: t3editor not enabled when editing .php/.inc files
	* Fixed bug #17268: t3editor dont save the "deactivated" state in fileadmin/fileedit

2011-01-24  Francois Suter  <francois.suter@typo3.org>
